Fix install button align

--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ button#installButton {
     position: absolute;
     right: 0.2em;
     top: 0.2em;
-    padding: 14px;
+    padding: 10px 14px;
 }
 
 #formulario {
